--- a/boards/shields/forager/forager.dtsi
+++ b/boards/shields/forager/forager.dtsi
@@ -7,11 +7,11 @@
         zmk,physical-layout = &default_layout;
     };
 
-    kscan0: kscan_0 {
-        compatible = "zmk,kscan-gpio-matrix";
-        diode-direction = "col2row";
-        wakeup-source;
-    };
+    // kscan0: kscan_0 {
+    //     compatible = "zmk,kscan-gpio-matrix";
+    //     diode-direction = "col2row";
+    //     wakeup-source;
+    // };
 
     default_layout: default_layout {
         compatible = "zmk,physical-layout";
