--- a/build.yaml
+++ b/build.yaml
@@ -21,9 +21,9 @@
 include:
   - board: seeeduino_xiao_ble
     shield: forager_dongle prospector_adapter
+    snippet: studio-rpc-usb-uarT
   - board: seeeduino_xiao_ble
     shield: forager_left rgbled_adapter
-#    snippet: studio-rpc-usb-uarT
   - board: seeeduino_xiao_ble
     shield: forager_right rgbled_adapter
   - board: seeeduino_xiao_ble
