--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,7 @@
 include:
   - board: seeeduino_xiao_ble
     shield: forager_dongle prospector_adapter
-    snippet: studio-rpc-usb-uarT
+    snippet: studio-rpc-usb-uart
   - board: seeeduino_xiao_ble
     shield: forager_left rgbled_adapter
   - board: seeeduino_xiao_ble
